manifests/mesh/service-b-destinationrule.yaml

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: service-b
spec:
  host: service-b
  subsets:
  - name: v1
    labels:
      version: v1
