manifests/mesh/service-c-destinationrule.yaml

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: service-c
spec:
  host: service-c
  subsets:
  - name: v1
    labels:
      version: v1
